web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-catch-let/output.txt
[SyntaxError]: Identifier has already been declared. (3,7)
3|  let foo;
 |     ^
